--- a/server/package.json
+++ b/server/package.json
@@ -35,5 +35,8 @@
     "passport-jwt": "^4.0.0",
     "sendgrid": "^5.2.3",
     "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
